# meta-magic_mount

./: Cargo.toml  README.md  README_en.md  cliff.toml
.github/: bot.py
.github/workflows/: ci.yml  license_header.yml  release.yml  webui-ci.yml
module/: config.toml  customize.sh  daemonize-mmrs  loader  metamount.sh
src/: config.rs  main.rs  scanner.rs
src/magic_mount/: mod.rs  node.rs  try_umount.rs
src/try_umount/: mod.rs
update/: changelog.md  update.json
webui/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.js  tsconfig.json  vite.config.ts
webui/src/: App.svelte  App.tsx  app.css  layout.css  main.ts  types.ts
webui/src/components/: NavBar.css  NavBar.svelte  NavBar.tsx  Skeleton.css  Toast.css  TopBar.css  TopBar.tsx
webui/src/lib/: api.js  api.mock.ts  api.ts  constants.js  constants.ts  i18n.ts  store.svelte.ts  store.ts  tabs.ts  theme.ts
webui/src/locales/: en.json  zh.json
webui/src/routes/: ConfigTab.css  ConfigTab.tsx  InfoTab.css  InfoTab.svelte  InfoTab.tsx  LogsTab.css  LogsTab.tsx  ModulesTab.css  ModulesTab.tsx  StatusTab.css  StatusTab.tsx
xtask/src/: main.rs
