[workspace]
members = ["xbuild"]

[package]
name = "magic_mount_rs"
version = "0.2.3"
edition = "2024"
description = "An implementation of a metamodule using Magic Mount, Based on MKSU, Template is from meta-overlay."
authors = ["7a72", "Tools-cx-app"]
license = "GPL-3.0"
repository = "https://github.com/shadow3aaa/fas-rs"

[dependencies]
anyhow = "1"
extattr = "1"
log = "0.4"
rustix = { version = "1.1", features = ["fs", "mount"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.9"
env_logger = "0.11.8"
chrono = "0.4.42"

[build-dependencies]
anyhow = "1.0.100"
toml = "0.9.8"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }

[profile.release]
overflow-checks = false
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true

[target.aarch64-linux-android.dependencies]
android_logger = "0.15.1"
